# DATN

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  server.c
example/media/: audio.g711a.h
include/: capture.h
include/smolrtsp/: controller.h
lib/examples/: server.c  test_server.c
lib/examples/media/: Create_file.sh  audio1.g711a  convert_audio_to_array.py  convert_video_to_array.py
lib/include/smolrtsp/: controller.h  util.h
lib/include/smolrtsp/types/: error.h
src/: capture.c  controller.c
src/camera-utils/: capture-jpeg.c  list-controls.c  list-formats.c
tests/: CMakeCache.txt  Makefile  cmake_install.cmake  controller.c
